--- a/fw/app/Makefile
+++ b/fw/app/Makefile
@@ -27,6 +27,7 @@ endif
 # Include packages that pull up and auto-init the link layer.
 # NOTE: 6LoWPAN will be included if IEEE802.15.4 devices are present
 USEMODULE += gnrc_netdev_default
+USEMODULE += gnrc_dutymac
 USEMODULE += netdev2_eth
 USEMODULE += auto_init_gnrc_netif
 # Specify the mandatory networking modules for 6LoWPAN border router
