Fix memory bugs in border router

--- a/fw/app/Makefile
+++ b/fw/app/Makefile
@@ -45,6 +45,11 @@ USEMODULE += ps
 # include UHCP client
 #USEMODULE += gnrc_uhcpc
 
+# Comment this out to disable code in RIOT that does safety checking
+# which is not needed in a production environment but helps in the
+# development process:
+CFLAGS += -DDEVELHELP
+
 # Set a custom 802.15.4 channel if needed
 DEFAULT_CHANNEL = 26
 CFLAGS += -DIEEE802154_DEFAULT_CHANNEL=$(DEFAULT_CHANNEL)
