--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "fw/RIOT"]
-	path = fw/RIOT
-	url = https://github.com/RIOT-OS/RIOT.git
+[submodule "fw/RIOT-OS"]
+	path = fw/RIOT-OS
+	url = https://github.com/samkumar/RIOT-OS
